# decoding-viz

./: .gitignore  README.md  deploy.sh
precompute/: README.md  beam.py  config.py  decoding.py  distribution.py  export.py  main.py  model.py  pyproject.toml  schema.py  scoring.py  tree.py  typedefs.py  vocab.py
precompute/data/: candidate_prompts.json
precompute/tests/: conftest.py  test_beam.py  test_decoding.py  test_distribution.py
site/: index.html  vercel.json
site/css/: style.css
site/data/: index.json  prompt0.json  prompt1.json  prompt2.json  prompt3.json  prompt4.json  prompt5.json  sample.json
site/js/: controls.js  data.js  distribution.js  evidence.js  main.js  strategies.js  tree.js
